@@ -8,6 +8,7 @@ Default Qt Client
 - Updated Qt to 6.10.1 on Windows
 - Option to disable sound device detection notifications in statusbar events
 - Ukranian translation
+- Speak Client Statistics now refreshes ping on Ctrl+T
 - Fixed bug where the value of the Show chat history as list view instead of text edit setting was sometimes deleted
 - Fixed bug where only first resolved IP-address was used for connection attempt
 Android Client
